<?xml version="1.0"?>
<package format="2">
  <name>ur_test</name>
  <version>0.0.0</version>
  <description>The ur_test package</description>
  <maintainer email="liquanlin@todo.todo">liquanlin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

<!-- build depend -->
<!-- referred to package xml in moveit_ws/moveit_tutorials/package.xml -->
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>image_transport</build_depend>
      <build_depend>roscpp</build_depend>

<!-- referred to package xml in trac_ik_examples -->
  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <!--
  <build_depend condition="$ROS_DISTRO != noetic">orocos_kdl</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</build_depend>
  -->
  <build_depend>liborocos-kdl-dev</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <!--
  <build_depend condition="$ROS_DISTRO == noetic">libnlopt-cxx-dev</build_depend>
  -->
  <build_depend>libnlopt-cxx-dev</build_depend>


<!-- excute depend -->
<!-- referred to package xml in moveit_ws/moveit_tutorials/package.xml -->
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>


<!-- referred to package xml in trac_ik_examples -->
  <exec_depend>boost</exec_depend>
  <!--
  <exec_depend condition="$ROS_DISTRO != noetic">orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">liborocos-kdl</exec_depend>
  -->
    <exec_depend>image_transport</exec_depend>
  <exec_depend>liborocos-kdl</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
  <exec_depend>libnlopt-dev</exec_depend>
  <exec_depend>libnlopt0</exec_depend>
    <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
